--- a/config_example.yml
+++ b/config_example.yml
@@ -11,3 +11,4 @@ street: "Straße 1"
 zipcode: "56789"
 city: "Berlin"
 2captcha_userkey: 65586210a12683de139c1b2hstz34904
+cola_crate_image: image.jpg
