--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,8 @@
 [deps]
 Cascadia = "54eefc05-d75b-58de-a785-1a3403f0919f"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Gumbo = "708ec375-b3d6-5a57-a7ce-8257bf98657a"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 WebDriver = "05625dda-b54a-434a-8c43-5c7937dfa4f0"
+XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
